infrastructure/controllers/production/vpn/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: controller-vpn
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
